feat(v2): add no-migration feature support
